build: restrict engine to yarn

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "dashboard-rhasody",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=16.17.0",
+    "yarn": ">=1.22.15",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
