--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write"
+    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx}": [
