--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write",
+    "prettier": "prettier 'src/**/*.{js,jsx,ts,tsx}' --write",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "**/*.{ts,tsx,js,jsx}": [
+    "src/**/*.{ts,tsx,js,jsx}": [
       "yarn prettier",
       "eslint"
     ]
